third_party/WebKit/Source/WebKit/chromium/public/WebConsoleMessage.h
@@ -41,7 +41,8 @@ struct WebConsoleMessage {
         LevelTip,
         LevelLog,
         LevelWarning,
-        LevelError
+        LevelError,
+        LevelDebug
     };
 
     Level level;
